syntax = "proto3";

package config.natasha;

option go_package = "gitlab.com/mcuc/monorepo/backend/natasha/pkg/config;natasha";

import "night-kit/api/carbon.proto";
import "validate/validate.proto";

message Config {
  carbon.Listener listener = 1 [ (validate.rules).message = {required : true} ];
  carbon.Logger logger = 2 [ (validate.rules).message = {required : true} ];
  carbon.Database database = 3 [ (validate.rules).message = {required : true} ];
  carbon.TCPSocket hawkeye = 4 [(validate.rules).message.required = true];
  carbon.JwtSigning mex_twt_token_signing = 5 [(validate.rules).message.required = true];
  FeatureFlag feature_flag = 10;
  MerchantCall merchant_call = 11;
}

message Email {
  string subject = 1 [(validate.rules).string.min_len = 1];
  // template file name (with extension)
  string template = 2 [(validate.rules).string.min_len = 1];
}

message MerchantCall {
  Email email = 1;
}

message FeatureFlag {
  bool enable_hawkeye = 1;
}